positioning info container

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="assets/css/skeleton.css">
 		<link rel="stylesheet" href="assets/css/scroll.css">
 		<link rel="stylesheet" href="assets/css/popup.css">
+		<link rel="stylesheet" href="assets/css/info.css">
 		<style id="keep_at_end"></style>
 	</head>
 	<body>
@@ -73,7 +74,7 @@
 						</div>
 					</a>
 					<div class="popup" id="3">
-						<img src="assets/img/cross.svg" id="cross" />
+						<img src="ssets/img/cross.svg" id="cross" />
 						<div class ="video-container"></div>
 					</div>
 					<a class="bar">
@@ -99,72 +100,12 @@
 					</div>
 			</div>
 
-			</div><!-- <div class="popup-container">
-				<div class="popup">
-					<img src="assets/img/cross.svg" id="cross" />
-					<img src="#" />
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<div class="popup">
-					<img src="assets/img/cross.svg" id="cross" />
-					<img src="#" />
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<div class="popup">
-					<img src="assets/img/cross.svg" id="cross" />
-					<img src="#" />
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<div class="popup">
-					<img src="assets/img/cross.svg" id="cross" />
-					<img src="#" />
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<div class="popup">
-					<img src="assets/img/cross.svg" id="cross" />
-					<img src="#" />
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<div class="popup">
-					<img src="assets/img/cross.svg" id="cross" />
-					<img src="#" />
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div> -->
+			</div>
 			<section class="info">
 			<div id="info-container" data="contact">
 		<div id="movable">
 		<div class="shapes">
-<!-- 			<img src="Assets/Exports/octa3.png" class="o31 shape">
+<!-- 		<img src="Assets/Exports/octa3.png" class="o31 shape">
 		
 			<img src="Assets/Exports/octa3.png" class="o32 shape">
 		
@@ -176,14 +117,14 @@
 
 			<img src="Assets/Exports/octa1.png" class="o12 shape"> -->
 
-			<!-- <img src="Assets/Exports/octa3.png" class="o33 shape">
+	   <!-- <img src="Assets/Exports/octa3.png" class="o33 shape">
 			<img src="Assets/Exports/octa3.png" class="o33 shape">
 			<img src="Assets/Exports/octa3.png" class="o33 shape">
 			<img src="Assets/Exports/octa3.png" class="o33 shape">
 			<img src="Assets/Exports/octa3.png" class="o33 shape">
 			<img src="Assets/Exports/octa3.png" class="o33 shape">
 			<img src="Assets/Exports/octa3.png" class="o33 shape">
- -->			<div class="o33 shape"></div>
+-->			<div class="o33 shape"></div>
 			<div class="o33 shape"></div>
 			<div class="o33 shape"></div>
 			<div class="o33 shape"></div>
@@ -204,11 +145,12 @@
 		</section>
 		</div>
 		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/tweenmax.min.js"></script>
 		<script src="assets/js/scroll.js"></script>
 		<script src="assets/js/transition.js"></script>
 		<script src="assets/js/pointer.js"></script>
 		<script src="assets/js/navbar.js"></script>
-
+		<script src="assets/js/move.js"></script>
 	</body>
 </html>
 
