--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>OASIS 2017 | Intro</title>
 		<link rel="stylesheet" href="assets/css/fonts.css">
+
 		<link rel="stylesheet" href="assets/css/animate.css">
 		<link rel="stylesheet" href="assets/css/skeleton.css">
 		<link rel="stylesheet" href="assets/css/scroll.css">
@@ -46,6 +47,7 @@
 		<!-- main content -->
 		<section class="container">
 			<div class="slider-container">
+				<div class="left-arrow"></div>
 				<div class="slider">
 					<a class="bar">
 						<div class="button animated fadeInUp">
@@ -102,6 +104,7 @@
 
 			</div>
 			<section class="info">
+			
 			<div id="info-container" data="contact">
 		<div id="movable">
 		<div class="shapes">
