--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!--   nav bar -->
 		<div class="wrapper">
 		<section class="left-tab">
-			<div>
+			<div class="heading_left_tab">
 				<img class="animated fadeInDown" src="assets/img/monogram.png" width="125">
 				<h1 class="animated fadeInDown"><b>OASIS</b></h1>
 				<div id="realms" class="animated fadeInUp">
