--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<!-- main content -->
 		<section class="container">
 			<div class="slider-container">
-				<div class="left-arrow"></div>
+				
 				<div class="slider">
 					<a class="bar">
 						<div class="button animated fadeInUp">
@@ -103,9 +103,9 @@
 			</div>
 
 			</div>
-			<section class="info">
-			
-				<div class="info-container" data="contact">
+			<section class="info-container">
+				<div class="cross"></div>
+				<div class="info" data="contact">
 					<div class="movable">
 						<div class="shapes">
 				<!-- 		<img src="Assets/Exports/octa3.png" class="o31 shape">
@@ -144,7 +144,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="info-container" data="about">
+				<div class="info" data="about">
 					<div class="movable">
 						<div class="shapes">
 				<!-- 		<img src="Assets/Exports/octa3.png" class="o31 shape">
@@ -183,7 +183,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="info-container" data="sponsors">
+				<div class="info" data="sponsors">
 					<div class="movable">
 						<div class="shapes">
 				<!-- 		<img src="Assets/Exports/octa3.png" class="o31 shape">
