--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						</div>
 					</a>
 					<div class="popup" id="3">
-						<img src="ssets/img/cross.svg" id="cross" />
+						<img src="assets/img/cross.svg" id="cross" />
 						<div class ="video-container"></div>
 					</div>
 					<a class="bar">
