adding content for sponsers, contact and About us

--- a/index.html
+++ b/index.html
@@ -140,7 +140,105 @@
 							<div class="image-main"></div>
 							<div class="content">
 								<h2>CONTACT US</h2>
-								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+								<div class="contact_data" id="c_data">
+
+              <div class="contactinfo">
+                <div class="contact_dept">Registration and Other Enquiries</div>
+                <!-- <div style="position:relative"><img src="./img/stuccan/shetty.jpg" class="contact_img">
+                  <a href="" target="_blank">
+                    <div class="fb_link">
+                    </div>
+                  </a>
+                </div> -->
+                <div class="contact_det"><b>ASIM SHAH</b>
+                  <br>Ph : 9828529994 <br>pcr [at] bits-oasis [dot] org</div>
+                </div>
+            <div class="contactinfo">
+              <div class="contact_dept">Sponsorship and Marketing</div>
+              <!-- <div style="position:relative"><img src="./img/stuccan/aditya_ruia.jpg" class="contact_img">
+                <a href="" target="_blank">
+                  <div class="fb_link">
+                  </div>
+                </a>
+              </div> -->
+              <div class="contact_det"><b>SIDDHANT NARULA</b>
+                <br>Ph : 9982200768
+                <br>sponsorship [at] bits-oasis [dot] org</div>
+              </div>
+              <div class="contactinfo">
+                <div class="contact_dept">Controls</div>
+                <!-- <div style="position:relative"><img src="./img/stuccan/mudit.jpg" class="contact_img">
+                  <a href="" target="_blank">
+                    <div class="fb_link">
+                    </div>
+                  </a>
+                </div> -->
+                <div class="contact_det"><b>NISHANT VERMA</b>
+                  <br>Ph : 8058877118
+                  <br>controls [at] bits-oasis [dot] org</div>
+                </div>
+                <div class="contactinfo">
+                  <div class="contact_dept">Website and Online Payments</div>
+                  <!-- <div style="position:relative"><img src="./img/stuccan/tarun.jpg" class="contact_img">
+                    <a href="" target="_blank">
+                      <div class="fb_link">
+                      </div>
+                    </a>
+                  </div> -->
+                  <div class="contact_det"><b>ARJUN TYAGI</b>
+                    <br>Ph : 8875052545
+                    <br>webmaster [at] bits-oasis [dot] org</div>
+                  </div>
+                  <div class="contactinfo">
+                    <div class="contact_dept">Reception and Accommodation</div>
+                    <!-- <div style="position:relative"><img src="./img/stuccan/ketul.jpg" class="contact_img">
+                      <a href="" target="_blank">
+                        <div class="fb_link">
+                        </div>
+                      </a>
+                    </div> -->
+                    <div class="contact_det"><b>ARNAV KUNDRA</b>
+                      <br>Ph : 9928026633
+                      <br>recnacc [at] bits-oasis [dot] org</div>
+                    </div>
+                    <div class="contactinfo">
+                      <div class="contact_dept">Art, Design and Publicity</div>
+                      <!-- <div style="position:relative"><img src="./img/stuccan/abhishek.jpg" class="contact_img">
+                        <a href="" target="_blank">
+                          <div class="fb_link">
+                          </div>
+                        </a>
+                      </div> -->
+                      <div class="contact_det"><b>GAUTAM CHANDRAHASA</b>
+                        <br>Ph : 9982084940
+                        <br>adp [at] bits-oasis [dot] org</div>
+                      </div>
+                        <div class="contactinfo">
+                          <div class="contact_dept">President</div>
+                          <!-- <div style="position:relative"><img src="./img/stuccan/prateek.jpg" class="contact_img">
+                            <a href="" target="_blank">
+                              <div class="fb_link">
+                              </div>
+                            </a>
+                          </div> -->
+                          <div class="contact_det"><b>PRATEEK BOTHRA</b>
+                            <br>Ph : 8058956664
+                            <br> president [at] bits-oasis [dot] org</div>
+                          </div>
+                          <div class="contactinfo">
+                            <div class="contact_dept">General Secretary</div>
+                            <!-- <div style="position:relative"><img src="./img/stuccan/manas.jpg" class="contact_img">
+                              <a href="" target="_blank">
+                                <div class="fb_link">
+                                </div>
+                              </a>
+                            </div> -->
+                            <div class="contact_det"><b>MANAS LUTHRA</b>
+                              <br>Ph : 7689969333
+                              <br> gensec [at] bits-oasis [dot] org</div>
+                            </div>
+                      
+                    </div>
 							</div>
 						</div>
 					</div>
@@ -180,7 +278,21 @@
 							<div class="image-main"></div>
 							<div class="content">
 								<h2>ABOUT US</h2>
-								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+								<p>Snatches of whatever your teacher’s been droning on about for the past hour, would weave in and out of your fantasies, to be interrupted when she hurls her chalk at you.<br>
+
+Hours made to stand outside the class and silly impositions would follow. 
+<br>
+
+Middle school was dumb. Your attention span hasn't really changed much here in college though, has it?
+<br>
+It’s only fair. Who wouldn’t be wrestling orcs at Amon Hen, or duelling the Dark Lord in the Battle of Hogwarts? Perhaps battle in the Lannisters’ army, in their fight to keep the Iron throne, all the while ignoring the lecturer as he tries to give you an actual future? Yeah, we thought so. 
+<br>
+Join us this Oasis ‘17, the 46th edition of BITS Pilani’s annual cultural festival from the 31st October to the 3rd November, with some of the biggest music acts such as Parikrama and Amit Trivedi, and public figures such as Salman Khurshid and Kiran Bedi all a part of its proud history. From games, to mouth watering food stalls and exhilarating concerts, we promise them all.
+<br>
+Join us, as we bring to life these Realms of Fiction, from Gotham and Winterfell to Avalon and Vice City. 
+<br>
+
+Oasis ‘17. Bigger than ever.</p>
 							</div>
 						</div>
 					</div>
@@ -220,7 +332,7 @@
 							<div class="image-main"></div>
 							<div class="content">
 								<h2>SPONSORS</h2>
-								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+								<p><a href="https://bits-oasis.org/sponsors">Click here to view previous sponsors</a></p>
 							</div>
 						</div>
 					</div>
