--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 					<span><label>REALMS</label><label>OF</label><label>FICTION</label></span>
 					<span>&#x30fb;</span>
 				</div>
+				<div id="dates">31<sup>st</sup> Oct - 4<sup>th</sup> Nov </div>
 			</div>
 			<div>
 				<nav>
@@ -36,11 +37,14 @@
 				</nav>
 			</div>
 			<div>
-				<span class="animated fadeInDown">
-					<a class="social" id="facebook">&#x271a;</a>
-					<a class="social" id="twitter">&#x271a;</a>
+				<div id="timer"> 90 Days to go </div>
+				<div>
+					<span class="animated fadeInDown">
+						<a class="social" id="facebook">&#x271a;</a>
+						<a class="social" id="twitter">&#x271a;</a>
 					<a class="social" id="youtube">&#x271a;</a>
-				</span>
+					</span>
+				</div>
 			</div>
 		</section>
 
