change in contact info

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     </div>
                   </a>
                 </div> -->
-                <div class="contact_det"><b>NISHANT VERMA</b>
+                <div class="contact_det"><b>NISANTH VERMA</b>
                   <br>Ph : 8058877118
                   <br>controls [at] bits-oasis [dot] org</div>
                 </div>
@@ -217,30 +217,7 @@
                         <br>Ph : 9982084940
                         <br>adp [at] bits-oasis [dot] org</div>
                       </div>
-                        <div class="contactinfo">
-                          <div class="contact_dept">President</div>
-                          <!-- <div style="position:relative"><img src="./img/stuccan/prateek.jpg" class="contact_img">
-                            <a href="" target="_blank">
-                              <div class="fb_link">
-                              </div>
-                            </a>
-                          </div> -->
-                          <div class="contact_det"><b>PRATEEK BOTHRA</b>
-                            <br>Ph : 8058956664
-                            <br> president [at] bits-oasis [dot] org</div>
-                          </div>
-                          <div class="contactinfo">
-                            <div class="contact_dept">General Secretary</div>
-                            <!-- <div style="position:relative"><img src="./img/stuccan/manas.jpg" class="contact_img">
-                              <a href="" target="_blank">
-                                <div class="fb_link">
-                                </div>
-                              </a>
-                            </div> -->
-                            <div class="contact_det"><b>MANAS LUTHRA</b>
-                              <br>Ph : 7689969333
-                              <br> gensec [at] bits-oasis [dot] org</div>
-                            </div>
+                        
                       
                     </div>
 							</div>
