--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@ Oasis ‘17. Bigger than ever.</p>
 							<div class="content">
 								<h2>SPONSORS</h2>
 								<p><a href="https://bits-oasis.org/sponsors">Click here to view previous sponsors</a></p>
+								<p><a href="./assets/Oasis17-Marketing-Brochure.pdf" target="_blank">Click here to view oasis brochure</a></p>
 							</div>
 						</div>
 					</div>
