Added Video Links

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="assets/css/popup.css">
 		<link rel="stylesheet" href="assets/css/info.css">
 		<style id="keep_at_end"></style>
+		<meta charset="UTF-8">
 	</head>
 	<body>
 		<!--   nav bar -->
@@ -55,13 +56,15 @@
 				<div class="slider">
 					<a class="bar">
 						<div class="button animated fadeInUp">
-							<div class="overlay"><div class="uppertext">OASIS'17</div><div class="seperator"></div><p>TRAILER</p></div>
-							<div class="uppertext">OASIS'17</div><div class="seperator"></div><p>TRAILER</p>
+							<div class="overlay"><div class="uppertext">OASIS'17</div><div class="seperator"></div><p>TEASER</p></div>
+							<div class="uppertext">OASIS'17</div><div class="seperator"></div><p>TEASER</p>
 						</div>
 					</a>
 					<div class="popup" id="1">
 						<img src="assets/img/cross.svg" id="cross" />
-						<div class ="video-container"></div>
+						<div class ="video-container">
+							<iframe src="https://www.youtube.com/embed/FN71wnk58Hg?ecver=1" frameborder="0" allowfullscreen></iframe>
+						</div>
 					</div>
 					<a class="bar">
 						<div class="button animated fadeInUp">
@@ -71,37 +74,45 @@
 					</a>
 					<div class="popup" id="2">
 						<img src="assets/img/cross.svg" id="cross" />
-						<div class ="video-container"></div>
+						<div class ="video-container">
+							<iframe src="https://www.youtube.com/embed/rh7WkyNXNRE?ecver=1" frameborder="0" allowfullscreen></iframe>
+						</div>
 					</div>
 					<a class="bar">
 						<div class="button animated fadeInUp">
-							<div class="overlay"><div class="uppertext">OASIS'17</div><div class="seperator"></div><p>TRAILER</p></div>
-							<div class="uppertext">OASIS'17</div><div class="seperator"></div><p>TRAILER</p>
+							<div class="overlay"><div class="uppertext">OASIS'16</div><div class="seperator"></div><p>PROMO</p></div>
+							<div class="uppertext">OASIS'16</div><div class="seperator"></div><p>PROMO</p>
 						</div>
 					</a>
 					<div class="popup" id="3">
 						<img src="assets/img/cross.svg" id="cross" />
-						<div class ="video-container"></div>
+						<div class ="video-container">
+							<iframe src="https://www.youtube.com/embed/-Bk1ybD9npc?ecver=1" frameborder="0" allowfullscreen></iframe>
+						</div>
 					</div>
 					<a class="bar">
 						<div class="button animated fadeInUp">
-							<div class="overlay"><div class="uppertext">OASIS'16</div><div class="seperator"></div><p>AFTERMOVIE</p></div>
-							<div class="uppertext">OASIS'16</div><div class="seperator"></div><p>AFTERMOVIE</p>
+							<div class="overlay"><div class="uppertext">OASIS'15</div><div class="seperator"></div><p>AFTERMOVIE</p></div>
+							<div class="uppertext">OASIS'15</div><div class="seperator"></div><p>AFTERMOVIE</p>
 						</div>
 					</a>
 					<div class="popup" id="4">
 						<img src="assets/img/cross.svg" id="cross" />
-						<div class ="video-container"></div>
+						<div class ="video-container">
+							<iframe  src="https://www.youtube.com/embed/oQtWSvYR1vc?ecver=1" frameborder="0" allowfullscreen></iframe>
+						</div>
 					</div>
 					<a class="bar">
 						<div class="button animated fadeInUp">
-							<div class="overlay"><div class="uppertext">OASIS'17</div><div class="seperator"></div><p>TRAILER</p></div>
-							<div class="uppertext">OASIS'17</div><div class="seperator"></div><p>TRAILER</p>
+							<div class="overlay"><div class="uppertext">OASIS'14</div><div class="seperator"></div><p>AFTERMOVIE</p></div>
+							<div class="uppertext">OASIS'14</div><div class="seperator"></div><p>AFTERMOVIE</p>
 						</div>
 					</a>
 					<div class="popup" id="5">
 						<img src="assets/img/cross.svg" id="cross" />
-						<div class ="video-container"></div>
+						<div class ="video-container">
+							<iframe src="https://www.youtube.com/embed/-PqOI7SpZRg?ecver=1" frameborder="0" allowfullscreen></iframe>
+						</div>
 
 					</div>
 			</div>
