added timer and changed font-size

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				</nav>
 			</div>
 			<div>
-				<div id="timer"> 90 Days to go </div>
+				<div id="timer"> <span>90</span> Days to go </div>
 				<div>
 					<span class="animated fadeInDown">
 						<a class="social" id="facebook">&#x271a;</a>
@@ -341,6 +341,7 @@ Oasis ‘17. Bigger than ever.</p>
 		<script src="assets/js/pointer.js"></script>
 		<script src="assets/js/navbar.js"></script>
 		<script src="assets/js/move.js"></script>
+		<script src='assets/js/timer.js'></script>>
 	</body>
 </html>
 
