--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<link rel="stylesheet" href="assets/css/scroll.css">
 		<link rel="stylesheet" href="assets/css/popup.css">
 		<link rel="stylesheet" href="assets/css/info.css">
-		<link rel="stylesheet" href="regstyle.css">
-		<link href="horsey.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="assets/css/regstyle.css">
+		<link href="assets/css/horsey.min.css" rel="stylesheet">
 		<style id="keep_at_end"></style>
 		<meta charset="UTF-8">
 	</head>
@@ -425,8 +425,8 @@ Oasis ‘17. Bigger than ever.</p>
 		<script src="assets/js/navbar.js"></script>
 		<script src="assets/js/move.js"></script>
 		<script src='assets/js/timer.js'></script>
-		<script src="horsey.min.js"></script>
-    <script src="register.js"></script>
+		<script src="assets/js/horsey.min.js"></script>
+    <script src="assets/js/register.js"></script>
 	</body>
 </html>
 
