--- a/index.html
+++ b/index.html
@@ -350,10 +350,14 @@ Oasis ‘17. Bigger than ever.</p>
              		 <div class="input-field">
                			 <label>Gender</label>
                			 <div class="gender-wrap">
+               			 	<div class="radio-field">
                  		 	<input name="gender" type="radio" value="M" />
                  			 <label>Male</label>
+                 			 </div>
+                 			 <div class="radio-field">
                   			<input name="gender" type="radio" value="F" />
                   			<label>Female</label>
+                  			</div>	
                			</div>
              		 </div>
              		 <div class="input-field">
@@ -377,10 +381,14 @@ Oasis ‘17. Bigger than ever.</p>
                    <div class="input-field">
                      <label>Are you the head of any cultural society?</label>
                      <div class="gender-wrap">
+                     	<div class="radio-field">
                       <input name="cultural" type="radio" value="Y" />
                        <label>Yes</label>
+                       </div>
+                       <div class="radio-field">
                         <input name="cultural" type="radio" value="N" />
                         <label>No</label>
+                        </div>
                     </div>
                  </div>
             		 <div class="input-field">
