--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 			</div>
 			<section class="info-container">
-				
+				<div class='msg'><p></p></div>
 				<div class="info" data="contact">
 					<div class="cross"></div>
 					<div class="movable">
