--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 				<div id="timer"> <span>90</span> Days to go </div>
 				<div>
 					<span class="animated fadeInDown">
-						<a class="social" id="facebook">&#x271a;</a>
-						<a class="social" id="twitter">&#x271a;</a>
-					<a class="social" id="youtube">&#x271a;</a>
+						<a class="social" id="facebook" href="https://www.facebook.com/oasis.bitspilani/">&#x271a;</a>
+						<a class="social" id="twitter" href="https://twitter.com/bitsoasis">&#x271a;</a>
+					<a class="social" id="youtube" href="https://www.youtube.com/channel/UCf40GISJivaYZK2pPOyt1kw">&#x271a;</a>
 					</span>
 				</div>
 			</div>
