--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<section class="left-tab">
 			<div class="heading_left_tab">
 				<img class="animated fadeInDown" src="assets/img/monogram.png" width="125">
-				<h1 class="animated fadeInDown"><b>OASIS</b></h1>
+				<h1 class="animated fadeInDown"><b>OASIS'17</b></h1>
 				<div id="realms" class="animated fadeInUp">
 					<span>&#x30fb;</span>
 					<span><label>REALMS</label><label>OF</label><label>FICTION</label></span>
@@ -191,7 +191,7 @@
                     </div>
                   </a>
                 </div> -->
-                <div class="contact_det"><b>NISANTH VERMA</b>
+                <div class="contact_det"><b>NISANTH VARMA</b>
                   <br>Ph : 8058877118
                   <br>controls [at] bits-oasis [dot] org</div>
                 </div>
@@ -227,7 +227,7 @@
                           </div>
                         </a>
                       </div> -->
-                      <div class="contact_det"><b>GAUTAM CHANDRAHASA</b>
+                      <div class="contact_det"><b>GOWTAM CHANDRAHASA</b>
                         <br>Ph : 9982084940
                         <br>adp [at] bits-oasis [dot] org</div>
                       </div>
