--- a/index.html
+++ b/index.html
@@ -424,6 +424,7 @@ Oasis ‘17. Bigger than ever.</p>
 			</section>
 		</section>
 		</div>
+		<div class='dropdown'></div>
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/tweenmax.min.js"></script>
 		<script src="assets/js/scroll.js"></script>
@@ -434,7 +435,17 @@ Oasis ‘17. Bigger than ever.</p>
 		<script src='assets/js/timer.js'></script>
 		<script src="assets/js/fuzzy.js"></script>
     	<script src="assets/js/register.js"></script>
-    	<div class='dropdown'></div>
+    	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-102775261-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+    	
 	</body>
 </html>
 
