--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
+
 <!DOCTYPE html>
 <html>
 	<head>
 		<title>OASIS 2017 | Intro</title>
-		<link rel="stylesheet" href="assets/css/fonts.css">
+		<link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
+		<link rel="stylesheet" href="./assets/css/fonts.css">
 
-		<link rel="stylesheet" href="assets/css/animate.css">
-		<link rel="stylesheet" href="assets/css/skeleton.css">
-		<link rel="stylesheet" href="assets/css/scroll.css">
-		<link rel="stylesheet" href="assets/css/popup.css">
-		<link rel="stylesheet" href="assets/css/info.css">
-		<link rel="stylesheet" href="assets/css/regstyle.css">
+		<link rel="stylesheet" href="./assets/css/animate.css">
+		<link rel="stylesheet" href="./assets/css/skeleton.css">
+		<link rel="stylesheet" href="./assets/css/scroll.css">
+		<link rel="stylesheet" href="./assets/css/popup.css">
+		<link rel="stylesheet" href="./assets/css/info.css">
+		<link rel="stylesheet" href="./assets/css/regstyle.css">
 		
 		<style id="keep_at_end"></style>
 		<meta charset="UTF-8">
@@ -19,7 +21,7 @@
 		<div class="wrapper">
 		<section class="left-tab">
 			<div class="heading_left_tab">
-				<img class="animated fadeInDown" src="assets/img/monogram.png" width="125">
+				<img class="animated fadeInDown" src="./assets/img/monogram.png" width="125">
 				<h1 class="animated fadeInDown"><b>OASIS'17</b></h1>
 				<div id="realms" class="animated fadeInUp">
 					<span>&#x30fb;</span>
@@ -37,16 +39,17 @@
 					<a class="animated flipInY" data="about">ABOUT US</a>
 					<a class="animated flipInY" data="sponsors">SPONSORS</a>
 					<a class="animated flipInY" data="contact">CONTACT US</a>
-					<a class="animated flipInY" data="register">REGISTER</a>
+					<!-- <a class="animated flipInY" data="register">REGISTER</a> -->
 				</nav>
 			</div>
 			<div>
 				<div id="timer"> <span>90</span> Days to go </div>
 				<div>
 					<span class="animated fadeInDown">
-						<a class="social" id="facebook" href="https://www.facebook.com/oasis.bitspilani/">&#x271a;</a>
-						<a class="social" id="twitter" href="https://twitter.com/bitsoasis">&#x271a;</a>
-					<a class="social" id="youtube" href="https://www.youtube.com/channel/UCf40GISJivaYZK2pPOyt1kw">&#x271a;</a>
+						<a class="social" id="facebook" href="https://www.facebook.com/oasis.bitspilani/" target="_blank">&#x271a;</a>
+						<a class="social" id="twitter" href="https://twitter.com/bitsoasis" target="_blank">&#x271a;</a>
+					<a class="social" id="youtube" href="https://www.youtube.com/channel/UCf40GISJivaYZK2pPOyt1kw" target="_blank">&#x271a;</a>
+						<a class="social" id="instagram" href="https://www.instagram.com/bitsoasis/" target="_blank">&#x271a;</a>
 					</span>
 				</div>
 			</div>
@@ -64,7 +67,7 @@
 						</div>
 					</a>
 					<div class="popup" id="1">
-						<img src="assets/img/cross.svg" id="cross" />
+						<img src="./assets/img/cross.svg" id="cross" />
 						<div class ="video-container">
 							<iframe src="https://www.youtube.com/embed/FN71wnk58Hg?ecver=1" frameborder="0" allowfullscreen></iframe>
 						</div>
@@ -76,7 +79,7 @@
 						</div>
 					</a>
 					<div class="popup" id="2">
-						<img src="assets/img/cross.svg" id="cross" />
+						<img src="./assets/img/cross.svg" id="cross" />
 						<div class ="video-container">
 							<iframe src="https://www.youtube.com/embed/rh7WkyNXNRE?ecver=1" frameborder="0" allowfullscreen></iframe>
 						</div>
@@ -88,7 +91,7 @@
 						</div>
 					</a>
 					<div class="popup" id="3">
-						<img src="assets/img/cross.svg" id="cross" />
+						<img src="./assets/img/cross.svg" id="cross" />
 						<div class ="video-container">
 							<iframe src="https://www.youtube.com/embed/-Bk1ybD9npc?ecver=1" frameborder="0" allowfullscreen></iframe>
 						</div>
@@ -100,7 +103,7 @@
 						</div>
 					</a>
 					<div class="popup" id="4">
-						<img src="assets/img/cross.svg" id="cross" />
+						<img src="./assets/img/cross.svg" id="cross" />
 						<div class ="video-container">
 							<iframe  src="https://www.youtube.com/embed/oQtWSvYR1vc?ecver=1" frameborder="0" allowfullscreen></iframe>
 						</div>
@@ -112,7 +115,7 @@
 						</div>
 					</a>
 					<div class="popup" id="5">
-						<img src="assets/img/cross.svg" id="cross" />
+						<img src="./assets/img/cross.svg" id="cross" />
 						<div class ="video-container">
 							<iframe src="https://www.youtube.com/embed/-PqOI7SpZRg?ecver=1" frameborder="0" allowfullscreen></iframe>
 						</div>
@@ -424,17 +427,17 @@ Oasis ‘17. Bigger than ever.</p>
 			</section>
 		</section>
 		</div>
-		<div class='dropdown'></div>
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/tweenmax.min.js"></script>
-		<script src="assets/js/scroll.js"></script>
-		<script src="assets/js/transition.js"></script>
-		<script src="assets/js/pointer.js"></script>
-		<script src="assets/js/navbar.js"></script>
-		<script src="assets/js/move.js"></script>
-		<script src='assets/js/timer.js'></script>
-		<script src="assets/js/fuzzy.js"></script>
-    	<script src="assets/js/register.js"></script>
+		
+		<script src="./assets/js/jquery.min.js"></script>
+		<script src="./assets/js/tweenmax.min.js"></script>
+		<script src="./assets/js/scroll.js"></script>
+		<script src="./assets/js/transition.js"></script>
+		<script src="./assets/js/pointer.js"></script>
+		<script src="./assets/js/navbar.js"></script>
+		<script src="./assets/js/move.js"></script>
+		<script src="./assets/js/timer.js"></script>
+		<script src="./assets/js/fuzzy.js"></script>
+    	<script src="./assets/js/register.js"></script>
     	<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -445,7 +448,7 @@ Oasis ‘17. Bigger than ever.</p>
   ga('send', 'pageview');
 
 </script>
-    	
+    	<div class='dropdown'></div>
 	</body>
 </html>
 
